--- a/css/index.css
+++ b/css/index.css
@@ -651,3 +651,61 @@
     position: relative;
   }
 }
+
+/* スイッチ */
+.toggle {
+  position: relative;
+  width: 42px;
+  /* Updated */
+  height: 21px;
+  /* Updated */
+  border-radius: 50px;
+  overflow: hidden;
+  cursor: pointer;
+}
+
+.toggle input[type=checkbox] {
+  display: none;
+}
+
+.toggle:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: block;
+  background: #e9e9eb;
+  -webkit-transition: 0.2s ease-out;
+  transition: 0.2s ease-out;
+}
+
+.toggle:after {
+  content: "";
+  position: absolute;
+  top: 1px;
+  /* Updated */
+  left: 1px;
+  /* Updated */
+  width: 20px;
+  /* Updated */
+  height: 19px;
+  /* Updated */
+  display: block;
+  border-radius: 50px;
+  background: #fff;
+  box-shadow: 0 9px 28px -6px rgba(0, 0, 0, 0.3);
+  -webkit-transition: 0.2s ease-out;
+  transition: 0.2s ease-out;
+}
+
+.toggle.checked:before {
+  background: #35c759;
+}
+
+.toggle.checked:after {
+  left: 21px;
+  /* Updated */
+  box-shadow: 0 9px 28px -6px rgba(0, 0, 0, 0.5);
+}
